--- a/horizontalBarChartIndex.html
+++ b/horizontalBarChartIndex.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-<script src="//jashkenas.github.io/underscore/underscore-min.js"></script>
-<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script data-main="app" src="scripts/libs/require.js"></script>
   <meta charset="utf-8">
   <title>JS Bin</title>
 </head>
