--- a/horizontalBarChartIndex.html
+++ b/horizontalBarChartIndex.html
@@ -4,6 +4,7 @@
 <head>
   <script data-main="app" src="scripts/libs/require.js"></script>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/font-roboto.css">
   <link rel="stylesheet" href="css/modular.css">
   <link rel="stylesheet" href="css/horizontalBarChart.css">
   <title>JS Bin</title>
@@ -11,7 +12,7 @@
 
 <body>
 
-  <div id="chartme" class="normalfont mediumtext horizontalBarChart"></div>
+  <div id="chartme" class="mediumtext horizontalBarChart"></div>
 
 </body>
 
