ready for merge with Alenas branch

--- a/horizontalBarChartIndex.html
+++ b/horizontalBarChartIndex.html
@@ -2,17 +2,18 @@
 <html>
 
 <head>
-  <script data-main="app" src="scripts/libs/require.js"></script>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="css/font-roboto.css">
-  <link rel="stylesheet" href="css/modular.css">
-  <link rel="stylesheet" href="css/horizontalBarChart.css">
-  <title>JS Bin</title>
+	<script data-main="app" src="scripts/libs/require.js"></script>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/font-roboto.css">
+	<link rel="stylesheet" href="css/modular.css">
+	<link rel="stylesheet" href="css/horizontalBarChart.css">
+	<title>JS Bin</title>
 </head>
 
 <body>
 
-  <div id="chartme" class="mediumtext horizontalBarChart"></div>
+	<div id="chartme" class="mediumtext horizontalBarChart cellpadding"></div>
+	<div id="chartyou" class="mediumtext horizontalBarChart cellpadding"></div>
 
 </body>
 
